=======
CHANGES
=======

0.5.2 (unreleased)
------------------

0.5.1 (2011-05-18)
------------------

- Send the credit card CVC code to authorize.net.
  [davisagli]

- Provide additional root certificates needed to validate the SSL certificate
  used by api.authorize.net
  [davisagli]

0.5.0 (2010-05-18)
------------------

- Added support for Authorize.net's Automated Recurring Billing (API)
  for managing subscription-based payments.
  [davisagli]

- Added tests.
  [davisagli]

0.4.0 (2010-04-07)
------------------

- Use zope.annotation instead of zope.app.annotation
  [davisagli]

0.3.3 (2009-08-19)
------------------
- Record the transaction id returned by authorize.net

0.3.2 (2009-07-22)
------------------
- Handle expiration date as a string.

0.3.1 (2009-03-13)
------------------
- added M2Crypto in the setup.py dependencies [lucielejard]

0.3 (2008-08-29)
----------------
- Added buildout files and general text documents to project root.
- Removed setup.cfg

0.2 (2008-08-21)
----------------
- Eggified package